--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Samples for Relay Pro SDK",
   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/relaypro/relay-samples.git"
+    "type": "git",
+    "url": "git+https://github.com/relaypro/relay-samples.git"
   },
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,8 @@
   "author": "Brandon Smith <bsmith@republicwireless.com> (https://relaypro.com/)",
   "license": "MIT",
   "dependencies": {
-    "@relaypro/sdk": "^2.0.0",
+    "@relaypro/sdk": "^2.4.0",
+    "express": "^4.18.1",
     "twilio": "^3.60.0"
   },
   "type": "module",
